--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial scale=1.0">
         <title>HAPPY BIRTHDAY</title>
-        <link rel="stylesheet" href="C:\Users\PAUL\Happy birthday\style.css">
+        <link rel="stylesheet" href="style.css">
         <script src="style.js"></script>
     </head>
     <body>
         <div class="first">
             <h1>HAPPY BIRTHDAY,<span id="name"> BABY BOO</span></h1>
             <p>Wishing you a day with love, joy and all the happiness in the world.</p>
-            <img src="C:\Users\PAUL\Happy birthday\image\bae.jpg_medium" alt="Picture">
+            <img src="C:..\image\bae.jpg_medium" alt="Picture">
             <div class="message">
                 <p>Dear <span id="name">Adaugo</span></p>
                 <p>On this ur special day, i want you to know how grateful i am to have you in my life. You bring so much
