--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="first">
             <h1>HAPPY BIRTHDAY,<span id="name"> BABY BOO</span></h1>
             <p>Wishing you a day with love, joy and all the happiness in the world.</p>
-            <img src="/image/picture.jpg_medium" alt="Picture">
+            <img src="./image/picture.jpg_medium" alt="Picture">
             <div class="message">
                 <p>Dear <span id="name">Adaugo</span></p>
                 <p>On this ur special day, i want you to know how grateful i am to have you in my life. You bring so much
