--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </p>
                 <p>Happy Birthday,My love</p>
             </div>
-            <button onclick="changename()">CLICK</button>
+            <button onclick="changename()">I LOVE YOU</button>
         </div>
     </body>
 </html>
