--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
             <img src="./image/picture.jpg_medium" alt="Picture">
             <div class="message">
                 <p>Dear <span id="name">Adaugo</span></p>
-                <p>On this ur special day, i want you to know how grateful i am to have you in my life. You bring so much
-                    love,laughter and happiness.You the deserve thr world and more.
+                <p>On this ur special day, i want you to know how grateful i am to have you in my life.The thought of you bring 
+                    so much love,laughter and happiness to my heart.You the deserve thr world and more sweetie.
                 </p>
                 <p>May this year be filled with endless adventures, incredible memories and the beautiful moments
-                    we shared together.Cheers to another amazing year of your life. 
+                    we shared together.Cheers to another amazing year and phase of your life. 
                 </p>
                 <p>Happy Birthday,My love</p>
             </div>
