--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="message">
                 <p>Dear <span id="name">Adaugo</span></p>
                 <p>On this ur special day, i want you to know how grateful i am to have you in my life.The thought of you bring 
-                    so much love,laughter and happiness to my heart.You the deserve thr world and more sweetie.
+                    so much love,laughter and happiness to my heart.You the deserve the world and more sweetie.
                 </p>
                 <p>May this year be filled with endless adventures, incredible memories and the beautiful moments
                     we shared together.Cheers to another amazing year and phase of your life. 
